# heweiping6.test

./: .cproject  .gitignore  .project  makefile
c.c/: point-point.c
c.c/dynamic_link/1/: Makefile  main.c  test_dlib1.c  test_dlib2.c
c.c/hello/: buildme.sh  main.c
c.c/mqtest/: buildme.sh  pos-rec.c  pos.c
c.c/pid/: buildme.sh  main.c
c.c/sizeof/: buildme.sh  main.c
c.c/sscanf/: buildme.sh  main.c
c.c/time/: buildme.sh  main.c
c.c/weakAstrong/: Makefile  func.h  main.c  strong.c  weak.c
cmake/e1/: CMakeLists.txt
cmake/e1/doc/: e1.txt
cmake/e1/source/: CMakeLists.txt
cmake/e1/source/include/: calldlib.h  callslib.h
cmake/e1/source/lib/: CMakeLists.txt  calldlib.c  callslib.c
cmake/e1/source/src/: CMakeLists.txt  main.c
cplusplus/compare/: main.cpp
cplusplus/extern-c/c++-call-c/: ReadMe  e1.h  main.cpp
cplusplus/extern-c/c-call-c++/: ReadMe  e1.cpp  e1.h  main.c
g.g/: buildme.bash
g.g/src/main/: main.go
g.g/src/one/: ohb.go  olog.go
git/: gitconfig
make/: m1
pick-face/: README  buildme.sh  pick_fack_by_dlib.cpp
